###########################################################################
#
# Project: Simple Hybesis Algorithm
#
# Copyright (c) Michael Jeulin-Lagarrigue.
# All rights reserved.
#
# Author: Michael Jeulin-Lagarrigue.
#
###########################################################################

#if(SimpleHybesisAlgorithm_BUILD_ARRAYMODULE)
  add_subdirectory(Collections)
#endif()